[tool.poetry]
name = "poetry-demo"
version = "0.1.2"
description = ""
authors = ["dntranm <gil.orlev@cycode.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = ">=3.9"
dagster-shell = "^0.17.15"
dbt-snowflake = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 19.3.2023 11:51
